一对多增加父子表单

--- a/Client/Dt.Base/Themes/Register.xaml
+++ b/Client/Dt.Base/Themes/Register.xaml
@@ -22,4 +22,5 @@
     <v:ManyToManyWin x:Key="ManyToManyWin" />
     <v:RelatedEntityList x:Key="RelatedEntityList" />
     <v:AddRelationDlg x:Key="AddRelationDlg" />
+    <v:EntityUnionForm x:Key="EntityUnionForm" />
 </ResourceDictionary>
