--- a/Demo/Demo.Crud/DemoMain.xaml
+++ b/Demo/Demo.Crud/DemoMain.xaml
@@ -13,12 +13,12 @@
         Order="1"
         To="NewWin"
         a:Ex.Dock="Left" />
-    <l:RptHome Order="2" />
     <a:NavList
         x:Name="_navEntity"
         Title="实体"
         Icon="词典"
-        Order="3"
+        Order="2"
         To="NewWin"
-        a:Ex.Dock="Right" />
+        ViewMode="Tile" />
+    <l:RptHome Order="3" a:Ex.Dock="Right" />
 </a:Win>
