--- a/Demo/Demo.UI/DemoMain.xaml
+++ b/Demo/Demo.UI/DemoMain.xaml
@@ -11,14 +11,14 @@
         Icon="词典"
         Order="1"
         To="NewWin"
-        ViewMode="Tile"
-        a:Ex.Dock="Left" />
+        ViewMode="Tile" />
     <a:NavList
         x:Name="_navTools"
         Title="工具"
         Icon="修理"
         Order="2"
-        To="NewWin" />
+        To="NewWin"
+        a:Ex.Dock="Left" />
     <a:NavList
         x:Name="_navModule"
         Title="综合"
