Win利用AutoUnpinSide MinWidthOfMain 属性配合，控制是否自动取消窗口两侧面板的固定状态

--- a/Demo/Demo.Entry/HomeWin.xaml
+++ b/Demo/Demo.Entry/HomeWin.xaml
@@ -4,7 +4,8 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
     xmlns:home="using:Dt.Mgr.Home"
-    xmlns:wf="using:Dt.Mgr.Workflow">
+    xmlns:wf="using:Dt.Mgr.Workflow"
+    AutoUnpinSide="True">
 
     <home:HomeMenu x:Name="_menu" Order="1" a:Ex.Dock="Left" />
     <wf:CurrentTasks Order="2" />
