--- a/Demo/Demo.UI/DemoMain.xaml
+++ b/Demo/Demo.UI/DemoMain.xaml
@@ -3,7 +3,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:a="using:Dt.Base"
-    Title="样例">
+    Title="样例"
+    AutoUnpinSide="True">
 
     <a:NavList
         x:Name="_navControl"
