--- a/Demo/Demo/Stub/Global.xaml
+++ b/Demo/Demo/Stub/Global.xaml
@@ -1,4 +1,8 @@
 ﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:a="using:Dt.Base" />
+    xmlns:a="using:Dt.Base">
+
+    <!-- App样式，可覆盖Dt默认样式 -->
+
+</ResourceDictionary>
